# strgen

./: .gitignore  LICENSE  README.md  meson.build
include/: nodes.hpp  parser.hpp  stringgenerator.hpp  tokens.hpp
src/: nodes.cpp  parser.cpp  stringgenerator.cpp
